snap-store backup push

--- a/simulations/downTimeDynMecHost/omnetpp.ini
+++ b/simulations/downTimeDynMecHost/omnetpp.ini
@@ -6,7 +6,51 @@ output-scalar-file-append = false
 **.routingRecorder.enabled = false
 **.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
 **.sctp.**.vector-recording = false  # remove annoying statistics from SCTP
-**.vector-recording = true
+#**.vector-recording = false
+#**.scalar-recording = false
+
+## en-disable single modules
+**.mechost1.**.vector-recording = false
+**.upf.**.vector-recording = false
+**.iUpf.**.vector-recording = false
+**.gNodeB1.**.vector-recording = false
+**.router.**.vector-recording = false
+**.server.**.vector-recording = false
+**.mecOrchestrator.**.vector-recording = false
+**.ualcmp.**.vector-recording = false
+**.configurator.**.vector-recording = false
+**.binder.**.vector-recording = false
+**.carrierAggregation.**.vector-recording = false
+**.channelControl.**.vector-recording = false
+**.routingRecorder.**.vector-recording = false
+**.ue[*].**.vector-recording = false
+#**.ue[*].mobility.**.vector-recording = false
+#**.ue[*].interfaceTable.**.vector-recording = false
+#**.ue[*].pcapRecorder*.**.vector-recording = false
+#**.ue[*].ueCollector.**.vector-recording = false
+#**.ue[*].udp.**.vector-recording = false
+#**.ue[*].tcp.**.vector-recording = false
+#**.ue[*].sctp.**.vector-recording = false
+#**.ue[*].ipv4.**.vector-recording = false
+#**.ue[*].ipv6.**.vector-recording = false
+#**.ue[*].encap.**.vector-recording = false
+#**.ue[*].cellularNic.**.vector-recording = false
+#**.ue[*].lo*.**.vector-recording = false
+#**.ue[*].eth*.**.vector-recording = false
+
+**.car[*].mobility.**.vector-recording = false
+**.car[*].interfaceTable.**.vector-recording = false
+**.car[*].pcapRecorder*.**.vector-recording = false
+**.car[*].ueCollector.**.vector-recording = false
+**.car[*].udp.**.vector-recording = false
+**.car[*].tcp.**.vector-recording = false
+**.car[*].sctp.**.vector-recording = false
+**.car[*].ipv4.**.vector-recording = false
+**.car[*].ipv6.**.vector-recording = false
+**.car[*].encap.**.vector-recording = false
+**.car[*].cellularNic.**.vector-recording = false
+**.car[*].lo*.**.vector-recording = false
+**.car[*].eth*.**.vector-recording = false
 
 ##########################################################
 #              Cellular network configurator             #
@@ -74,7 +118,7 @@ sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 20
+repeat = 3
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -108,7 +152,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 **.numParkedCar = 30
-**.numUe = ${NUMUE=5..40 step 5}
+**.numUe = ${NUMUE=5..50 step 5}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
