--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -81,7 +81,7 @@ sim-time-limit=40s
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
-repeat = 2
+repeat = 5
 seed-set = ${runnumber}
 
 experiment-label = "${configname}"
@@ -115,8 +115,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numUe = ${NUMUE=50..400 step 50}
+**.numParkedCar = ${NUMCARS=200}
+**.numUe = ${NUMUE=25..350 step 25}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -299,7 +299,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 #*.mechost*.vim.vimApp.skipLocalResources = true
-*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
+*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
