--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -6,7 +6,8 @@ output-scalar-file-append = false
 **.routingRecorder.enabled = false
 **.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
 **.sctp.**.vector-recording = false  # remove annoying statistics from SCTP
-**.vector-recording = true
+#**.vector-recording = false
+#**.scalar-recording = false
 
 ##########################################################
 #              Cellular network configurator             #
@@ -327,6 +328,61 @@ network = simulation_examples.simulations.dynamicMECHost.ParkNetworkWithSpawner
 #sim-time-limit=82800s
 sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 
+
+# Disable vector recordings
+**.mechost1.router.**.vector-recording = false
+**.mechost1.upf_mec.**.vector-recording = false
+*.mechost1.vim.**.vector-recording = false
+**.mechost1.mecPlatformManager.**.vector-recording = false
+**.mechost1.mecPlatform.interfaceTable.**.vector-recording = false
+**.mechost1.mecPlatform.mp1Ppp.**.vector-recording = false
+**.mechost1.mecPlatform.lo*.**.vector-recording = false
+**.mechost1.mecPlatform.extEth.**.vector-recording = false
+**.mechost1.mecPlatform.ipv4.**.vector-recording = false
+**.mechost1.mecPlatform.ipv6.**.vector-recording = false
+**.mechost1.mecPlatform.udp.**.vector-recording = false
+**.mechost1.mecPlatform.tcp.**.vector-recording = false
+**.upf.**.vector-recording = false
+**.iUpf.**.vector-recording = false
+**.gNodeB1.**.vector-recording = false
+**.router.**.vector-recording = false
+**.server.**.vector-recording = false
+**.mecOrchestrator.**.vector-recording = false
+**.ualcmp.**.vector-recording = false
+**.configurator.**.vector-recording = false
+**.binder.**.vector-recording = false
+**.carrierAggregation.**.vector-recording = false
+**.channelControl.**.vector-recording = false
+**.routingRecorder.**.vector-recording = false
+**.UE*.**.vector-recording = false
+**.UE*.mobility.**.vector-recording = false
+**.UE*.interfaceTable.**.vector-recording = false
+**.UE*.pcapRecorder*.**.vector-recording = false
+**.UE*.ueCollector.**.vector-recording = false
+**.UE*.udp.**.vector-recording = false
+**.UE*.tcp.**.vector-recording = false
+**.UE*.sctp.**.vector-recording = false
+**.UE*.ipv4.**.vector-recording = false
+**.UE*.ipv6.**.vector-recording = false
+**.UE*.encap.**.vector-recording = false
+**.UE*.cellularNic.**.vector-recording = false
+**.UE*.lo*.**.vector-recording = false
+**.UE*.eth*.**.vector-recording = false
+
+**.PC*.mobility.**.vector-recording = false
+**.PC*.interfaceTable.**.vector-recording = false
+**.PC*.pcapRecorder*.**.vector-recording = false
+**.PC*.ueCollector.**.vector-recording = false
+**.PC*.udp.**.vector-recording = false
+**.PC*.tcp.**.vector-recording = false
+**.PC*.sctp.**.vector-recording = false
+**.PC*.ipv4.**.vector-recording = false
+**.PC*.ipv6.**.vector-recording = false
+**.PC*.encap.**.vector-recording = false
+**.PC*.cellularNic.**.vector-recording = false
+**.PC*.lo*.**.vector-recording = false
+**.PC*.eth*.**.vector-recording = false
+
 ############# Floorplan parameters ################
 **.mobility.constraintAreaMaxX = 2000m
 **.mobility.constraintAreaMaxY = 10000m
@@ -397,6 +453,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 
 **.mechost*.mecPlatform.mecService[1].typename = "ApplicationMobilityService"
 **.mechost*.mecPlatform.mecService[1].localPort = 10022
+**.mechost*.mecPlatform.mecService[1].vector-recording = true
 
 **.mechost*.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
 **.mechost*.mecPlatform.mecService[0].rng-0 = 0 # request service time
@@ -471,14 +528,14 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 #*.UE*.mobility.initialY = 411m
 **.UE*.mobility.speed = 10mps
 
-**.spawner.initFromFile = true
+**.spawner.initFromFile = false
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
 **.spawner.parkCapacity = ${PARKCAPACITY=100}
-**.spawner.initTimeLine = ${TIMELINE = 11..18}
-**.spawner.initialParkedCars = 5
+**.spawner.initTimeLine = ${TIMELINE = 0}
+#**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
-#**.spawner.intervalBurst = 49
 **.spawner.intervalBurst = 3600
-#**.spawner.delta = 5
 **.spawner.delta = 600
+**.spawner.initialParkedCars = 0
+**.spawner.vector-recording = true
