--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -528,11 +528,11 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 #*.UE*.mobility.initialY = 411m
 **.UE*.mobility.speed = 10mps
 
-**.spawner.initFromFile = false
+**.spawner.initFromFile = true
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
-**.spawner.parkCapacity = ${PARKCAPACITY=100}
-**.spawner.initTimeLine = ${TIMELINE = 0}
+**.spawner.parkCapacity = ${PARKCAPACITY=200}
+**.spawner.initTimeLine = ${TIMELINE = 18}
 #**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
 **.spawner.intervalBurst = 3600
