Changed some simulations

--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -115,7 +115,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=200}
+**.numParkedCar = ${NUMCARS=0}
 **.numUe = ${NUMUE=25..350 step 25}
 #**.numUe = 100
 *.car[*].numApps = 1
@@ -194,6 +194,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[1].positionX = 340
 *.ue[*].app[1].positionY = 411
 *.ue[*].app[1].radius = 30
+
+*.ue[*].app[1].coreAddress = "cloudServer"
+*.ue[*].app[1].coreTesting = true
 
 #*.ue[*].app[1].positionY = 311
 
@@ -299,7 +302,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 #*.mechost*.vim.vimApp.skipLocalResources = true
-*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true}
+*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=false}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
