--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -332,7 +332,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 # Disable vector recordings
 **.mechost1.router.**.vector-recording = false
 **.mechost1.upf_mec.**.vector-recording = false
-*.mechost1.vim.**.vector-recording = false
+**.mechost1.vim.**.vector-recording = true
 **.mechost1.mecPlatformManager.**.vector-recording = false
 **.mechost1.mecPlatform.interfaceTable.**.vector-recording = false
 **.mechost1.mecPlatform.mp1Ppp.**.vector-recording = false
@@ -532,7 +532,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
 **.spawner.parkCapacity = ${PARKCAPACITY=200}
-**.spawner.initTimeLine = ${TIMELINE = 18}
+**.spawner.initTimeLine = ${TIMELINE = 17..23}
 #**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
 **.spawner.intervalBurst = 3600
