Refactoring MecServiceBase - changed mecplatformmanger name

--- a/simulations/FinalCompleteSimulation/omnetpp.ini
+++ b/simulations/FinalCompleteSimulation/omnetpp.ini
@@ -137,7 +137,7 @@ sim-time-limit=40s
 *.mechost1.vim.vimApp.localPort = 3333 
 *.mechost*.vim.vimApp.brokerAddress = "server"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
-*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
+*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
 *.mechost*.vim.vimApp.meoPort = 9876
@@ -150,12 +150,12 @@ sim-time-limit=40s
 #*.mechost*.vim.viApp.mp1Port = 10021
 
 # Mepm
-*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
-*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
-*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
-*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
-*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
-*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
+*.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
+*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+*.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
+*.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
+*.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
+*.mechost*.mecPlatformManagerHost.mepmApp.meoPort = 9876
 # Mep
 **.mechost*.mecPlatform.numMecServices = 1
 **.mechost*.mecPlatform.mecService[0].typename = "LocationService"
