--- a/simulations/MecHostUPF/omnetpp.ini
+++ b/simulations/MecHostUPF/omnetpp.ini
@@ -133,7 +133,7 @@ sim-time-limit=40s
 *.mechost1.vim.app[0].localPort = 3333 
 *.mechost1.vim.app[0].brokerAddress = "server"
 *.mechost1.vim.app[0].searchType = "ROUND_ROBIN"
-*.mechost1.vim.app[0].mepmAddress = "mechost1.mecPlatformManager"
+*.mechost1.vim.app[0].mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost1.vim.app[0].mepmPort = 3334
 *.mechost1.vim.app[0].meoAddress = "mecOrchestrator"
 *.mechost1.vim.app[0].meoPort = 9876
@@ -150,14 +150,14 @@ sim-time-limit=40s
 
 
 # Mepm
-*.mechost1.mecPlatformManager.numApps = 1
-*.mechost1.mecPlatformManager.app[0].typename = "MecPlatformManagerDyn"
-*.mechost1.mecPlatformManager.app[0].localAddress = "mechost1.mecPlatformManager"
-*.mechost1.mecPlatformManager.app[0].localPort = 3334
-*.mechost1.mecPlatformManager.app[0].vimAddress = "mechost1.vim"
-*.mechost1.mecPlatformManager.app[0].vimPort = 3333
-*.mechost1.mecPlatformManager.app[0].meoAddress = "mecOrchestrator"
-*.mechost1.mecPlatformManager.app[0].meoPort = 9876
+*.mechost1.mecPlatformManagerHost.numApps = 1
+*.mechost1.mecPlatformManagerHost.app[0].typename = "MecPlatformManagerDyn"
+*.mechost1.mecPlatformManagerHost.app[0].localAddress = "mechost1.mecPlatformManagerHost"
+*.mechost1.mecPlatformManagerHost.app[0].localPort = 3334
+*.mechost1.mecPlatformManagerHost.app[0].vimAddress = "mechost1.vim"
+*.mechost1.mecPlatformManagerHost.app[0].vimPort = 3333
+*.mechost1.mecPlatformManagerHost.app[0].meoAddress = "mecOrchestrator"
+*.mechost1.mecPlatformManagerHost.app[0].meoPort = 9876
 
 # Mep
 **.mechost*.mecPlatform.numMecServices = 1
