--- a/simulations/pubsubTest/omnetpp.ini
+++ b/simulations/pubsubTest/omnetpp.ini
@@ -41,9 +41,9 @@ network = simulation_examples.simulations.pubsubTest.PubsubNet
 *.mechost.vim.app[1].localAddress = "mechost.vim"
 *.mechost.vim.app[1].vimAddress = "mechost.vim"
 *.mechost.vim.app[1].vimPort = 3333
-*.mechost.mecPlatformManager.app[0].localAddress = "mechost.mecPlatformManager"
-*.mechost.mecPlatformManager.app[0].mecOrchestratorPort = 3300
-*.mechost.mecPlatformManager.app[0].mecOrchestratorAddress = "mechost.vim"
+*.mechost.mecPlatformManagerHost.app[0].localAddress = "mechost.mecPlatformManagerHost"
+*.mechost.mecPlatformManagerHost.app[0].mecOrchestratorPort = 3300
+*.mechost.mecPlatformManagerHost.app[0].mecOrchestratorAddress = "mechost.vim"
 *.mechost.color = "green"
 
 
