--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -104,9 +104,9 @@ num-rngs = 3
 *.mechost.vim.app[1].localAddress = "mechost.vim"
 *.mechost.vim.app[1].vimAddress = "mechost.vim"
 *.mechost.vim.app[1].vimPort = 3333
-*.mechost.mecPlatformManager.app[0].localAddress = "mechost.mecPlatformManager"
-*.mechost.mecPlatformManager.app[0].mecOrchestratorPort = 3300
-*.mechost.mecPlatformManager.app[0].mecOrchestratorAddress = "mechost.vim"
+*.mechost.mecPlatformManagerHost.app[0].localAddress = "mechost.mecPlatformManagerHost"
+*.mechost.mecPlatformManagerHost.app[0].mecOrchestratorPort = 3300
+*.mechost.mecPlatformManagerHost.app[0].mecOrchestratorAddress = "mechost.vim"
 *.mechost.color = "green"
 
 *.car.numApps = 2
@@ -144,7 +144,7 @@ num-rngs = 3
 *.fakeclient.app[0].typename = "InstantiationMecpm"
 *.fakeclient.app[0].localPort = 3222
 *.fakeclient.app[0].destPort = 3334
-*.fakeclient.app[0].destAddress = "mechost.mecPlatformManager" 
+*.fakeclient.app[0].destAddress = "mechost.mecPlatformManagerHost" 
 *.fakeclient.app[0].localAddress = "fakeclient"
 *.fakeclient.app[0].terminate = true
 *.fakeclient.app[0].term_delay = 10
@@ -167,7 +167,7 @@ num-rngs = 3
 *.fakeclient2.app[0].typename = "InstantiationMecpm"
 *.fakeclient2.app[0].localPort = 3222
 *.fakeclient2.app[0].destPort = 3334
-*.fakeclient2.app[0].destAddress = "mechost.mecPlatformManager" 
+*.fakeclient2.app[0].destAddress = "mechost.mecPlatformManagerHost" 
 *.fakeclient2.app[0].localAddress = "fakeclient2"
 *.fakeclient2.app[0].terminate = false
 *.fakeclient2.app[0].term_delay = 3.0
