--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -280,7 +280,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 *.mechost*.vim.vimApp.skipLocalResources = true
 #*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
-*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
+*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
 *.mechost*.vim.vimApp.meoPort = 9876
@@ -293,14 +293,14 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.mechost*.vim.viApp.mp1Port = 10021
 
 # Mepm
-*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
-*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
-*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
-*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
-*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
-*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
-*.mechost1.mecPlatformManager.mepmApp.brokerAddress = "mechost1.mecPlatform"
-*.mechost1.mecPlatformManager.mepmApp.brokerPort = 10022
+*.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
+*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+*.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
+*.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
+*.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
+*.mechost*.mecPlatformManagerHost.mepmApp.meoPort = 9876
+*.mechost1.mecPlatformManagerHost.mepmApp.brokerAddress = "mechost1.mecPlatform"
+*.mechost1.mecPlatformManagerHost.mepmApp.brokerPort = 10022
 
 # Mep
 **.mechost*.mecPlatform.numMecServices = 2
@@ -332,8 +332,8 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 # Disable vector recordings
 **.mechost1.router.**.vector-recording = false
 **.mechost1.upf_mec.**.vector-recording = false
+**.mechost1.mecPlatformManagerHost.**.vector-recording = false
 **.mechost1.vim.**.vector-recording = true
-**.mechost1.mecPlatformManager.**.vector-recording = false
 **.mechost1.mecPlatform.interfaceTable.**.vector-recording = false
 **.mechost1.mecPlatform.mp1Ppp.**.vector-recording = false
 **.mechost1.mecPlatform.lo*.**.vector-recording = false
@@ -423,7 +423,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 #*.mechost*.vim.vimApp.skipLocalResources = true
 *.mechost*.vim.vimApp.skipLocalResources = true
-*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManager"
+*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
 *.mechost*.vim.vimApp.meoPort = 9876
@@ -436,14 +436,14 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 #*.mechost*.vim.viApp.mp1Port = 10021
 
 # Mepm
-*.mechost1.mecPlatformManager.mepmApp.localAddress = "mechost1.mecPlatformManager"
-*.mechost*.mecPlatformManager.mepmApp.localPort = 3334
-*.mechost1.mecPlatformManager.mepmApp.vimAddress = "mechost1.vim"
-*.mechost*.mecPlatformManager.mepmApp.vimPort = 3333
-*.mechost*.mecPlatformManager.mepmApp.meoAddress = "mecOrchestrator"
-*.mechost*.mecPlatformManager.mepmApp.meoPort = 9876
-*.mechost1.mecPlatformManager.mepmApp.brokerAddress = "mechost1.mecPlatform"
-*.mechost1.mecPlatformManager.mepmApp.brokerPort = 10022
+*.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
+*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+*.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
+*.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
+*.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
+*.mechost*.mecPlatformManagerHost.mepmApp.meoPort = 9876
+*.mechost1.mecPlatformManagerHost.mepmApp.brokerAddress = "mechost1.mecPlatform"
+*.mechost1.mecPlatformManagerHost.mepmApp.brokerPort = 10022
 
 # Mep
 **.mechost*.mecPlatform.numMecServices = 2
