Changes due to solving conflicts

--- a/simulations/downTimeDynMecHost/omnetpp.ini
+++ b/simulations/downTimeDynMecHost/omnetpp.ini
@@ -188,9 +188,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[0].localPort = 4500
 *.ue[*].app[0].UALCMPAddress = "ualcmp"
 *.ue[*].app[0].UALCMPPort = 1000
-*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
 ##
-*.ue[*].app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "DUEWarningAlertApp"
 
 # set address
 
@@ -318,7 +318,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
