--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -115,8 +115,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=0}
-**.numUe = ${NUMUE=25..350 step 25}
+**.numParkedCar = ${NUMCARS=100}
+**.numUe = ${NUMUE=30}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -156,9 +156,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[0].localPort = 4500
 *.ue[*].app[0].UALCMPAddress = "ualcmp"
 *.ue[*].app[0].UALCMPPort = 1000
-*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
 ##
-*.ue[*].app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "DUEWarningAlertApp"
 
 # set address
 
@@ -289,7 +289,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -317,7 +317,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 # Mepm
 *.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
-*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+*.mechost*.mecPlatformManageMECHost loading all files in ApplicationDescriptors directoryrHost.mepmApp.localPort = 3334
 *.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
 *.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
 *.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
@@ -376,7 +376,7 @@ sim-time-limit=300s
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -471,9 +471,9 @@ sim-time-limit=300s
 **.UE*.app[0].localPort = 4500
 **.UE*.app[0].UALCMPAddress = "ualcmp"
 **.UE*.app[0].UALCMPPort = 1000
-**.UE*.app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+**.UE*.app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
 ##
-**.UE*.app[1].typename = "UEWarningAlertApp"
+**.UE*.app[1].typename = "DUEWarningAlertApp"
 
 #*.UE*.app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
 **.UE*.app[1].amsAddress = "mechost1.mecPlatform"
