--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -155,9 +155,9 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[0].localPort = 4500
 *.ue[*].app[0].UALCMPAddress = "ualcmp"
 *.ue[*].app[0].UALCMPPort = 1000
-*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
 ##
-*.ue[*].app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "DUEWarningAlertApp"
 
 # set address
 
@@ -266,7 +266,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -409,7 +409,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -506,9 +506,9 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.UE*.app[0].localPort = 4500
 **.UE*.app[0].UALCMPAddress = "ualcmp"
 **.UE*.app[0].UALCMPPort = 1000
-**.UE*.app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+**.UE*.app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
 ##
-**.UE*.app[1].typename = "UEWarningAlertApp"
+**.UE*.app[1].typename = "DUEWarningAlertApp"
 
 #*.UE*.app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
 **.UE*.app[1].amsAddress = "mechost1.mecPlatform"
@@ -531,8 +531,8 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.spawner.initFromFile = true
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
-**.spawner.parkCapacity = ${PARKCAPACITY=200}
-**.spawner.initTimeLine = ${TIMELINE = 17..23}
+**.spawner.parkCapacity = ${PARKCAPACITY=50}
+**.spawner.initTimeLine = ${TIMELINE = 0}
 #**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
 **.spawner.intervalBurst = 3600
