--- a/simulations/downTimeDynMecHost/ApplicationDescriptors/DWarningAlertApp.json
+++ b/simulations/downTimeDynMecHost/ApplicationDescriptors/DWarningAlertApp.json
@@ -1,7 +1,7 @@
 {
 "appDid" : "WAMECAPP",
-"appName" : "MECWarningAlertApp",
-"appProvider" : "simu5g.apps.mec.WarningAlert.MECWarningAlertApp",
+"appName" : "DMECWarningAlertApp",
+"appProvider" : "simu5g.apps.mec.DynamicMecApps.WarningAlertApp.DMECWarningAlertApp",
 "appInfoName" : "appInfoName_",
 "appDescription" : "appDescription_",
 "virtualComputeDescriptor" :{
