Fixing simulations for newer version

--- a/simulations/MecPlatform_simulationtest/omnetpp.ini
+++ b/simulations/MecPlatform_simulationtest/omnetpp.ini
@@ -35,7 +35,7 @@ sim-time-limit = 70s
 ## MeHost resources
 **.mechost.maxMECApps = 100	
 
-**.mechost.eNBList = "gNodeB1"
+**.mechost.bsList = "gNodeB1"
 
 ## MecPlatform settings
 **.mechost.mecPlatform.numMecServices = 1
