--- a/simulations/downTimeDynMecHost/omnetpp.ini
+++ b/simulations/downTimeDynMecHost/omnetpp.ini
@@ -322,7 +322,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
