--- a/simulations/dynamicMECHost/omnetpp.ini
+++ b/simulations/dynamicMECHost/omnetpp.ini
@@ -115,8 +115,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=100}
-**.numUe = ${NUMUE=30}
+**.numParkedCar = ${NUMCARS=1}
+**.numUe = ${NUMUE=1}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -293,7 +293,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
@@ -380,7 +380,7 @@ sim-time-limit=300s
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
