--- a/simulations/mechostdyn_test/omnetpp.ini
+++ b/simulations/mechostdyn_test/omnetpp.ini
@@ -74,7 +74,7 @@ num-rngs = 3
 ## MeHost resources
 **.mechost.maxMECApps = 100	
 
-**.mechost.eNBList = "gNodeB1"
+**.mechost.bsList = "gNodeB1"
 
 ## MecPlatform settings
 **.mechost.mecPlatform.numMecServices = 1
