--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -270,7 +270,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
@@ -413,7 +413,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
