--- a/simulations/testingLocalResources/omnetpp.ini
+++ b/simulations/testingLocalResources/omnetpp.ini
@@ -1,11 +1,17 @@
+# THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
 num-rngs = 3
 sim-time-limit = 60s
+output-scalar-file-append = false
+**.routingRecorder.enabled = false
+**.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
+**.sctp.**.vector-recording = false  # remove annoying statistics from SCTP
+**.vector-recording = true
 
 ##########################################################
 #              Cellular network configurator             #
 ##########################################################
-*.configurator.config = xmldoc("./demo.xml")
+**.configurator.config = xmldoc("./demo.xml")
 
 ##########################################################
 #              NR specific parameters                   #
@@ -20,18 +26,21 @@ sim-time-limit = 60s
 #######################################################
 #        CA and channel model configuration           # 
 #######################################################
+#
 *.carrierAggregation.numComponentCarriers = 1
 *.carrierAggregation.componentCarrier[0].numBands =  25 #${numBands=25}
+*.carrierAggregation.componentCarrier[0].numerologyIndex = 2
 
 *.*.cellularNic.LteChannelModelType = "NRChannelModel"
 *.gNodeB1.cellularNic.numCarriers = 1
 *.gNodeB1.cellularNic.channelModel[0].componentCarrierIndex = 0
 
+
 # UE Channel configuration
 *.ue*.cellularNic.numCarriers = 1
 *.ue*.cellularNic.nrChannelModel[0].componentCarrierIndex = 0
 
-**.ue*.masterId = 1    
+**.ue*.masterId = 1   
 **.ue*.macCellId = 1   
 **.ue*.nrMasterId = 1
 **.ue*.nrMacCellId = 1
@@ -58,11 +67,41 @@ sim-time-limit = 60s
 
 **.hasRNISupport = true
 
+#**.configurator.dumpRoutes = true
+#**.configurator.dumpTopology = true
+#**.configurator.dumpLinks = true
+#**.configurator.dumpAddresses = true
+
+
 
 
 [Config TestSubscription]
-network = simulation_examples.simulations.AMSRealScenario.FinalNetwork
+network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
 sim-time-limit=40s
+#*.gNodeB1.cellularNic.phy.
+
+############# Repetition ##########################
+repeat = 5
+seed-set = ${runnumber}
+
+experiment-label = "${configname}"
+measurement-label = "${iterationvars}"
+replication-label = "#${repetition}, seed-set=<seedset>"
+
+###################################################
+
+############# Floorplan parameters ################
+**.mobility.constraintAreaMaxX = 2000m
+**.mobility.constraintAreaMaxY = 10000m
+**.mobility.constraintAreaMinX = 0m
+**.mobility.constraintAreaMinY = 250m
+**.mobility.constraintAreaMinZ = 0m
+**.mobility.constraintAreaMaxZ = 0m
+**.mobility.initFromDisplayString = false
+
+############### BS position #################
+*.gNodeB1.mobility.initialX = 139m
+*.gNodeB1.mobility.initialY = 302m
 
 #------------Server configuration---------------
 *.server.numApps = 2
@@ -70,87 +109,76 @@ sim-time-limit=40s
 *.server.app[1].typename = "ResourceRegisterApp"
 *.server.app[1].startTime = 0.02s
 
-# Tester modules
-#*.server.app[2].typename = "MobilityTester" # mecapp registration
-#*.server.app[2].localAddress = "server"
-#*.server.app[2].remoteAddress = "mechost1.mecPlatform"
-#*.server.app[2].remotePort = 10022
-#
-#*.server.app[3].typename = "TriggerAMS" # notification trigger
-#*.server.app[3].localAddress = "server"
-#*.server.app[3].remoteAddress = "mechost1.mecPlatform"
-#*.server.app[3].remotePort = 10022
 
 ##------------MecCar configuration---------------
-*.car.numApps = 1
-*.car.viApp.localPort = 2222
-*.car.viApp.localAddress = "car"
-#*.car2.viApp.localAddress = "car2"
-*.car.viApp.vimAddress = "mechost1.vim"
-*.car.viApp.vimPort = 3333
-*.car.viApp.mp1Address = "mechost1.mecPlatform"
-*.car.viApp.mp1Port = 10021
-*.car.app[0].typename = "ClientResourceApp"
-*.car.app[0].localPort = 3333
-#*.car.app[0].destPort = 3333
-*.car.app[0].destAddress = "server" 
-*.car.app[0].localAddress = "car"
-#*.car2.app[0].localAddress = "car2"
-*.car.app[0].viPort = 2222
-*.car.app[0].startTime = 0.05s
-*.car.app[0].parkTime = 3s
+# use this for ping time comparison graph
+#**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
-*.car2.numApps = 1
-*.car2.viApp.localPort = 2222
-*.car2.viApp.localAddress = "car2"
-*.car2.viApp.vimAddress = "mechost1.vim"
-*.car2.viApp.vimPort = 3333
-*.car2.viApp.mp1Address = "mechost1.mecPlatform"
-*.car2.viApp.mp1Port = 10021
-*.car2.app[0].typename = "ClientResourceApp"
-*.car2.app[0].localPort = 3333
-*.car2.app[0].destAddress = "server"
-*.car2.app[0].localAddress = "car2"
-*.car2.app[0].viPort = 2222
-*.car2.app[0].startTime = 0.05s
-*.car2.app[0].parkTime = 10s
-#*.car2.app[1].typename = "TriggerAMS"
-#*.car2.app[1].localAddress = "car2"
-#*.car2.app[1].remotePort = 10022
-#*.car2.app[1].remoteAddress = "mechost1.mecPlatform"
+#**.numParkedCar = ${NUMCARS=150..200 step 50}
+**.numParkedCar = ${NUMCARS=0}
+**.numUe = ${NUMUE=1}
+#**.numUe = 100
+#*.car[*].numApps = 1
+#*.car[*].viApp.localPort = 2222
+#*.car[0].viApp.localAddress = "car[0]"
+#*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
+##*.car[1].viApp.localAddress = "car[1]"
+#*.car[*].viApp.vimAddress = "mechost1.vim"
+#*.car[*].viApp.vimPort = 3333
+#*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
+#*.car[*].viApp.mp1Port = 10021
+#*.car[*].app[0].typename = "ClientResourceApp"
+#*.car[*].app[0].localPort = 3333
+##*.car.app[0].destPort = 3333
+#*.car[*].app[0].destAddress = "server" 
+#*.car[0].app[0].localAddress = "car[0]"
+#*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
+##*.car2.app[0].localAddress = "car2"
+#*.car[*].app[0].viPort = 2222
+#*.car[*].app[0].startTime = 0.05s
+#*.car[*].app[0].parkTime = 40s
+#*.car[*].app[0].parkTime = uniform(8s, 10s)
 
+
+##------------CAR initial position---------------
+**.car[*].mobility.initialX = 80m
+**.car[*].mobility.initialY = 280m
+#**.car[1].mobility.initialY = 310m
 
 ##------------UEWarningAlertApp---------------
-*.ue*.numApps = 2
-*.ue*.app[0].typename = "DeviceApp"
-*.ue*.app[0].localPort = 4500
-*.ue*.app[0].UALCMPAddress = "ualcmp"
-*.ue*.app[0].UALCMPPort = 1000
-*.ue*.app[0].appPackageSource = "ApplicationDescriptors/WarningAlertApp.json"
+*.ue[*].numApps = 2
+*.ue[*].app[0].typename = "DeviceApp"
+*.ue[*].app[0].localPort = 4500
+*.ue[*].app[0].UALCMPAddress = "ualcmp"
+*.ue[*].app[0].UALCMPPort = 1000
+*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/ExtMECWarningAlertApp.json"
 ##
-*.ue*.app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].mecAppName = "ExtMECWarningAlertApp"
+
+# set address
+*.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+*.ue[*].app[1].deviceAppPort = 4500
+*.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
+*.ue[*].app[1].stopTime = 25s
 #
-*.ue.app[1].deviceAppAddress = "ue"
-*.ue*.app[1].amsAddress = "mechost1.mecPlatform"
-*.ue*.app[1].amsPort = 10022
-*.ue2.app[1].deviceAppAddress = "ue2"
-*.ue*.app[1].deviceAppPort = 4500
-*.ue*.app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue*.app[1].stopTime = 25s
-#
-*.ue.app[1].positionX = 340
-*.ue.app[1].positionY = 311
-*.ue.app[1].radius = 30
-#
-*.ue2.app[1].positionX = 340
-*.ue2.app[1].positionY = 411
-*.ue2.app[1].radius = 30
-#
-#
-## MOBILITY
-*.ue*.mobility.typename = "LinearMobility"
-**.ue*.mobility.initialMovementHeading = 0deg
-**.ue*.mobility.speed = 10mps
+*.ue[*].app[1].positionX = 340
+*.ue[*].app[1].positionY = 411
+*.ue[*].app[1].radius = 30
+
+#*.ue[*].app[1].coreAddress = "cloudServer"
+#*.ue[*].app[1].coreTesting = true
+
+
+## UEs INITIAL POSITIONs
+*.ue[*].mobility.typename = "LinearMobility"
+**.ue[*].mobility.initialX = 250m
+**.ue[*].mobility.initialY = 411m
+
+
+**.ue[*].mobility.initialMovementHeading = 0deg
+**.ue[*].mobility.speed = 10mps
+
 
 # UALCMP config
 *.ualcmp.isMEOapp = true
@@ -158,7 +186,7 @@ sim-time-limit=40s
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "WarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "ExtMECWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -170,6 +198,8 @@ sim-time-limit=40s
 *.mechost*.vim.vimApp.brokerAddress = "server"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+#*.mechost*.vim.vimApp.skipLocalResources = true
+*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=false}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
@@ -178,13 +208,14 @@ sim-time-limit=40s
 *.mechost*.vim.vimApp.mp1Port = 10021
 *.mechost1.vim.viApp.localAddress = "mechost1.vim"
 *.mechost1.vim.viApp.vimAddress = "mechost1.vim"
+*.mechost1.vim.vimApp.skipLocalResources = false
 *.mechost*.vim.viApp.vimPort = 3333
 #*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
 #*.mechost*.vim.viApp.mp1Port = 10021
 
 # Mepm
 *.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
-*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+*.mechost*.mecPlatformManageMECHost loading all files in ApplicationDescriptors directoryrHost.mepmApp.localPort = 3334
 *.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
 *.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
 *.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
