--- a/simulations/FinalCompleteSimulation/omnetpp.ini
+++ b/simulations/FinalCompleteSimulation/omnetpp.ini
@@ -130,7 +130,7 @@ sim-time-limit=40s
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
