--- a/simulations/simulationsTesting/omnetpp.ini
+++ b/simulations/simulationsTesting/omnetpp.ini
@@ -269,7 +269,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
@@ -357,7 +357,7 @@ sim-time-limit=86400s
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
-**.mechost*.eNBList = "gNodeB1"
+**.mechost*.bsList = "gNodeB1"
 **.mechost*.color = "purple"
 # Vim
 *.mechost1.vim.vimApp.localAddress = "mechost1.vim"
