--- a/simulations/testingLocalResources/omnetpp.ini
+++ b/simulations/testingLocalResources/omnetpp.ini
@@ -115,28 +115,28 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=0}
-**.numUe = ${NUMUE=1}
+**.numParkedCar = ${NUMCARS=3}
+**.numUe = ${NUMUE=20}
 #**.numUe = 100
-#*.car[*].numApps = 1
-#*.car[*].viApp.localPort = 2222
-#*.car[0].viApp.localAddress = "car[0]"
-#*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
+*.car[*].numApps = 1
+*.car[*].viApp.localPort = 2222
+*.car[0].viApp.localAddress = "car[0]"
+*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
 ##*.car[1].viApp.localAddress = "car[1]"
-#*.car[*].viApp.vimAddress = "mechost1.vim"
-#*.car[*].viApp.vimPort = 3333
-#*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
-#*.car[*].viApp.mp1Port = 10021
-#*.car[*].app[0].typename = "ClientResourceApp"
-#*.car[*].app[0].localPort = 3333
-##*.car.app[0].destPort = 3333
-#*.car[*].app[0].destAddress = "server" 
-#*.car[0].app[0].localAddress = "car[0]"
-#*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
-##*.car2.app[0].localAddress = "car2"
-#*.car[*].app[0].viPort = 2222
-#*.car[*].app[0].startTime = 0.05s
-#*.car[*].app[0].parkTime = 40s
+*.car[*].viApp.vimAddress = "mechost1.vim"
+*.car[*].viApp.vimPort = 3333
+*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
+*.car[*].viApp.mp1Port = 10021
+*.car[*].app[0].typename = "ClientResourceApp"
+*.car[*].app[0].localPort = 3333
+#*.car.app[0].destPort = 3333
+*.car[*].app[0].destAddress = "server" 
+*.car[0].app[0].localAddress = "car[0]"
+*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
+#*.car2.app[0].localAddress = "car2"
+*.car[*].app[0].viPort = 2222
+*.car[*].app[0].startTime = 0.05s
+*.car[*].app[0].parkTime = uniform(8s, 10s)
 #*.car[*].app[0].parkTime = uniform(8s, 10s)
 
 
@@ -153,11 +153,13 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[0].UALCMPPort = 1000
 *.ue[*].app[0].appPackageSource = "ApplicationDescriptors/ExtMECWarningAlertApp.json"
 ##
-*.ue[*].app[1].typename = "UEWarningAlertApp"
+*.ue[*].app[1].typename = "DUEWarningAlertApp"
 *.ue[*].app[1].mecAppName = "ExtMECWarningAlertApp"
 
 # set address
 *.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+*.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
+*.ue[*].app[1].amsPort = 10022
 *.ue[*].app[1].deviceAppPort = 4500
 *.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
 *.ue[*].app[1].stopTime = 25s
@@ -199,7 +201,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
 *.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
 #*.mechost*.vim.vimApp.skipLocalResources = true
-*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=false}
+*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true}
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
 *.mechost*.vim.vimApp.mepmPort = 3334
 *.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
