--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -409,7 +409,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 # MEC Orchestrator settings
 *.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
 *.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
+*.mecOrchestrator.meoApp.mecApplicationPackageList = "ExtMECWarningAlertApp"
 
 ## MECHost configuration
 **.mechost*.maxMECApps = 100	
@@ -506,9 +506,10 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.UE*.app[0].localPort = 4500
 **.UE*.app[0].UALCMPAddress = "ualcmp"
 **.UE*.app[0].UALCMPPort = 1000
-**.UE*.app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
+**.UE*.app[0].appPackageSource = "ApplicationDescriptors/ExtMECWarningAlertApp.json"
 ##
 **.UE*.app[1].typename = "DUEWarningAlertApp"
+**.UE*.app[1].mecAppName = "ExtMECWarningAlertApp" # Changing default value
 
 #*.UE*.app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
 **.UE*.app[1].amsAddress = "mechost1.mecPlatform"
@@ -531,8 +532,8 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.spawner.initFromFile = true
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
-**.spawner.parkCapacity = ${PARKCAPACITY=50}
-**.spawner.initTimeLine = ${TIMELINE = 0}
+**.spawner.parkCapacity = ${PARKCAPACITY=150}
+**.spawner.initTimeLine = ${TIMELINE = 0..12}
 #**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
 **.spawner.intervalBurst = 3600
