updates for protocol times

--- a/simulations/testingLocalResources/omnetpp.ini
+++ b/simulations/testingLocalResources/omnetpp.ini
@@ -17,11 +17,15 @@ output-scalar-file-append = false
 #              NR specific parameters                   #
 ##########################################################
 *.gNodeB*.cellInfo.broadcastMessageInterval = 0.5s
+**.downlink_interference = true
+**.uplink_interference = true
 **.fbPeriod = 40   # reports CQI every 40ms
 **.amcType = "NRAmc"
 **.pilotMode = "ROBUST_CQI" 
 **.targetBler = 0.01
 **.blerShift = 5  
+
+
 
 #######################################################
 #        CA and channel model configuration           # 
@@ -65,6 +69,7 @@ output-scalar-file-append = false
 **.tcp.tcpAlgorithmClass = "TcpReno"    # TcpReno/TcpTahoe/TcpNewReno/TcpNoCongestionControl/DumbTcp
 **.tcp.sackSupport = true               # Selective Acknowledgment (RFC 2018, 2883, 3517) support (header option) (SACK will be enabled for a connection if both endpoints support it)
 
+
 **.hasRNISupport = true
 
 #**.configurator.dumpRoutes = true
@@ -77,12 +82,12 @@ output-scalar-file-append = false
 
 [Config TestSubscription]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
-sim-time-limit=40s
+sim-time-limit=30s
 #*.gNodeB1.cellularNic.phy.
 
 ############# Repetition ##########################
 repeat = 5
-seed-set = ${runnumber}
+seed-set = ${runnumber} # seed changing for each simulation
 
 experiment-label = "${configname}"
 measurement-label = "${iterationvars}"
@@ -115,8 +120,8 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #**.numParkedCar = ${NUMPARKED = int($SKIP)}
 
 #**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=3}
-**.numUe = ${NUMUE=50}
+**.numParkedCar = ${NUMCARS=10..100 step 10}
+**.numUe = ${NUMUE=0}
 #**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
@@ -136,13 +141,13 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = uniform(8s, 10s)
+*.car[*].app[0].parkTime = 10s #uniform(8s, 10s)
 #*.car[*].app[0].parkTime = uniform(8s, 10s)
 
 
 ##------------CAR initial position---------------
-**.car[*].mobility.initialX = 80m
-**.car[*].mobility.initialY = 280m
+**.car[*].mobility.initialX = uniform(0m, 500m)
+**.car[*].mobility.initialY = uniform(250m, 1000m)
 #**.car[1].mobility.initialY = 310m
 
 ##------------UEWarningAlertApp---------------
@@ -162,7 +167,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.ue[*].app[1].amsPort = 10022
 *.ue[*].app[1].deviceAppPort = 4500
 *.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue[*].app[1].stopTime = 25s
+*.ue[*].app[1].stopTime = 30s
 #
 *.ue[*].app[1].positionX = 340
 *.ue[*].app[1].positionY = 411
@@ -244,3 +249,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 **.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
 **.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+
+
+
+
