--- a/simulations/allocationTimeSimulationNew/omnetpp.ini
+++ b/simulations/allocationTimeSimulationNew/omnetpp.ini
@@ -1,7 +1,6 @@
-# THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
 num-rngs = 3
-sim-time-limit = 60s
+sim-time-limit = 50s
 output-scalar-file-append = false
 **.routingRecorder.enabled = false
 **.sctp.**.scalar-recording = false  # remove annoying statistics from SCTP
@@ -17,8 +16,8 @@ output-scalar-file-append = false
 #              NR specific parameters                   #
 ##########################################################
 *.gNodeB*.cellInfo.broadcastMessageInterval = 0.5s
-**.downlink_interference = true
-**.uplink_interference = true
+#**.downlink_interference = true
+#**.uplink_interference = true
 **.fbPeriod = 40   # reports CQI every 40ms
 **.amcType = "NRAmc"
 **.pilotMode = "ROBUST_CQI" 
@@ -72,29 +71,14 @@ output-scalar-file-append = false
 
 **.hasRNISupport = true
 
-#**.configurator.dumpRoutes = true
-#**.configurator.dumpTopology = true
-#**.configurator.dumpLinks = true
-#**.configurator.dumpAddresses = true
-
-
-
-
 [Config TestSubscription]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
-sim-time-limit=30s
-#*.gNodeB1.cellularNic.phy.
-
-############# Repetition ##########################
-repeat = 50
-seed-set = ${runnumber}+1941023425 # seed changing for each simulation
+repeat = 10
+seed-set = ${runnumber}+12091023425 # seed changing for each simulation
 
 experiment-label = "${configname}"
 measurement-label = "${iterationvars}"
 replication-label = "#${repetition}, seed-set=<seedset>"
-
-###################################################
-
 
 # ############### Disable vector recordings #######
 **.mechost1.router.**.vector-recording = false
@@ -169,15 +153,11 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.server.app[1].typename = "ResourceRegisterApp"
 *.server.app[1].startTime = 0.02s
 
+#**.numParkedCar = ${NUMCARS=50..200 step 50}
+**.numParkedCar = ${NUMCARS=200}
+#**.numUe = ${NUMUE=25..350 step 25}
+**.numUe = ${NUMUE=225..350 step 25}
 
-##------------MecCar configuration---------------
-# use this for ping time comparison graph
-#**.numParkedCar = ${NUMPARKED = int($SKIP)}
-
-#**.numParkedCar = ${NUMCARS=150..200 step 50}
-**.numParkedCar = ${NUMCARS=10..150 step 10}
-**.numUe = ${NUMUE=0}
-#**.numUe = 100
 *.car[*].numApps = 1
 *.car[*].viApp.localPort = 2222
 *.car[0].viApp.localAddress = "car[0]"
@@ -196,14 +176,13 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 #*.car2.app[0].localAddress = "car2"
 *.car[*].app[0].viPort = 2222
 *.car[*].app[0].startTime = 0.05s
-*.car[*].app[0].parkTime = 10s #uniform(8s, 10s)
-#*.car[*].app[0].parkTime = uniform(8s, 10s)
+*.car[*].app[0].parkTime = 40s
 
 
 ##------------CAR initial position---------------
 **.car[*].mobility.initialX = uniform(0m, 500m)
 **.car[*].mobility.initialY = uniform(250m, 1000m)
-#**.car[1].mobility.initialY = 310m
+
 
 ##------------UEWarningAlertApp---------------
 *.ue[*].numApps = 2
@@ -270,7 +249,7 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 *.mechost*.vim.vimApp.mp1Port = 10021
 *.mechost1.vim.viApp.localAddress = "mechost1.vim"
 *.mechost1.vim.viApp.vimAddress = "mechost1.vim"
-*.mechost1.vim.vimApp.skipLocalResources = false
+#*.mechost1.vim.vimApp.skipLocalResources = false
 *.mechost*.vim.viApp.vimPort = 3333
 #*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
 #*.mechost*.vim.viApp.mp1Port = 10021
@@ -304,6 +283,36 @@ replication-label = "#${repetition}, seed-set=<seedset>"
 
 **.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
 **.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
