--- a/simulations/simulationTestingAutomatic/omnetpp.ini
+++ b/simulations/simulationTestingAutomatic/omnetpp.ini
@@ -1,6 +1,7 @@
 # THE CHOICE OF THE PARAMETERS CAN BE MOTIVATED BY CITING THE PAPER: Simu5G: A system-level simulator for 5G networks
 [General]
 num-rngs = 3
+seed-set = 34328492045
 sim-time-limit = 60s
 output-scalar-file-append = false
 **.routingRecorder.enabled = false
@@ -76,257 +77,262 @@ output-scalar-file-append = false
 
 
 
-[Config TestSubscription]
-network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
-sim-time-limit=40s
-
-#*.gNodeB1.cellularNic.phy.
-
-############# Repetition ##########################
-repeat = 1
-seed-set = ${runnumber}
-
-experiment-label = "${configname}"
-measurement-label = "${iterationvars}"
-replication-label = "#${repetition}, seed-set=<seedset>"
-
-###################################################
-
-############# Floorplan parameters ################
-**.mobility.constraintAreaMaxX = 2000m
-**.mobility.constraintAreaMaxY = 10000m
-**.mobility.constraintAreaMinX = 0m
-**.mobility.constraintAreaMinY = 250m
-**.mobility.constraintAreaMinZ = 0m
-**.mobility.constraintAreaMaxZ = 0m
-**.mobility.initFromDisplayString = false
-
-############### BS position #################
-*.gNodeB1.mobility.initialX = 139m
-*.gNodeB1.mobility.initialY = 302m
-
-#------------Server configuration---------------
-*.server.numApps = 2
-*.server.app[0].typename = "HttpBrokerApp"
-*.server.app[1].typename = "ResourceRegisterApp"
-*.server.app[1].startTime = 0.02s
-
-
-##------------MecCar configuration---------------
-# use this for ping time comparison graph
-#**.numParkedCar = ${NUMPARKED = int($SKIP)}
-
-**.numParkedCar = ${NUMCARS=8}
-**.numUe = ${NUMUE=20}
-#**.parkCapacity = ${PARKCAPACITY=1000}
-#**.numUe = 100
-*.car[*].numApps = 1
-*.car[*].viApp.localPort = 2222
-*.car[0].viApp.localAddress = "car[0]"
-*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
-#*.car[1].viApp.localAddress = "car[1]"
-*.car[*].viApp.vimAddress = "mechost1.vim"
-*.car[*].viApp.vimPort = 3333
-*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
-*.car[*].viApp.mp1Port = 10021
-*.car[*].app[0].typename = "ClientResourceApp"
-*.car[*].app[0].localPort = 3333
-#*.car.app[0].destPort = 3333
-*.car[*].app[0].destAddress = "server" 
-*.car[0].app[0].localAddress = "car[0]"
-*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
-#*.car2.app[0].localAddress = "car2"
-*.car[*].app[0].viPort = 2222
-*.car[*].app[0].startTime = 0.05s
-#*.car[*].app[0].parkTime = 40s
-*.car[*].app[0].parkTime = uniform(2s, 14s)
-
-
-
-
-##------------CAR initial position---------------
-**.car[*].mobility.initialX = 80m
-**.car[*].mobility.initialY = 280m
-#**.car[1].mobility.initialY = 310m
-
-##------------UEWarningAlertApp---------------
-*.ue[*].numApps = 2
-*.ue[*].app[0].typename = "DeviceApp"
-*.ue[*].app[0].localPort = 4500
-*.ue[*].app[0].UALCMPAddress = "ualcmp"
-*.ue[*].app[0].UALCMPPort = 1000
-*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
+#[Config TestSubscription]
+#network = simulation_examples.simulations.dynamicMECHost.ParkNetwork
+#sim-time-limit=40s
+#
+##*.gNodeB1.cellularNic.phy.
+#
+############## Repetition ##########################
+#repeat = 1
+#seed-set = ${runnumber}
+#
+#experiment-label = "${configname}"
+#measurement-label = "${iterationvars}"
+#replication-label = "#${repetition}, seed-set=<seedset>"
+#
+####################################################
+#
+############## Floorplan parameters ################
+#**.mobility.constraintAreaMaxX = 2000m
+#**.mobility.constraintAreaMaxY = 10000m
+#**.mobility.constraintAreaMinX = 0m
+#**.mobility.constraintAreaMinY = 250m
+#**.mobility.constraintAreaMinZ = 0m
+#**.mobility.constraintAreaMaxZ = 0m
+#**.mobility.initFromDisplayString = false
+#
+################ BS position #################
+#*.gNodeB1.mobility.initialX = 139m
+#*.gNodeB1.mobility.initialY = 302m
+#
+##------------Server configuration---------------
+#*.server.numApps = 2
+#*.server.app[0].typename = "HttpBrokerApp"
+#*.server.app[1].typename = "ResourceRegisterApp"
+#*.server.app[1].startTime = 0.02s
+#
+#
+###------------MecCar configuration---------------
+## use this for ping time comparison graph
+##**.numParkedCar = ${NUMPARKED = int($SKIP)}
+#
+#**.numParkedCar = ${NUMCARS=8}
+#**.numUe = ${NUMUE=20}
+##**.parkCapacity = ${PARKCAPACITY=1000}
+##**.numUe = 100
+#*.car[*].numApps = 1
+#*.car[*].viApp.localPort = 2222
+#*.car[0].viApp.localAddress = "car[0]"
+#*.car[*].viApp.localAddress = "car[" + string(parentIndex()) + "]"
+##*.car[1].viApp.localAddress = "car[1]"
+#*.car[*].viApp.vimAddress = "mechost1.vim"
+#*.car[*].viApp.vimPort = 3333
+#*.car[*].viApp.mp1Address = "mechost1.mecPlatform"
+#*.car[*].viApp.mp1Port = 10021
+#*.car[*].app[0].typename = "ClientResourceApp"
+#*.car[*].app[0].localPort = 3333
+##*.car.app[0].destPort = 3333
+#*.car[*].app[0].destAddress = "server" 
+#*.car[0].app[0].localAddress = "car[0]"
+#*.car[*].app[0].localAddress = "car[" + string(parentIndex()) + "]"
+##*.car2.app[0].localAddress = "car2"
+#*.car[*].app[0].viPort = 2222
+#*.car[*].app[0].startTime = 0.05s
+##*.car[*].app[0].parkTime = 40s
+#*.car[*].app[0].parkTime = uniform(2s, 14s)
+#
+#
+#
+#
+###------------CAR initial position---------------
+#**.car[*].mobility.initialX = 80m
+#**.car[*].mobility.initialY = 280m
+##**.car[1].mobility.initialY = 310m
+#
+###------------UEWarningAlertApp---------------
+#*.ue[*].numApps = 2
+#*.ue[*].app[0].typename = "DeviceApp"
+#*.ue[*].app[0].localPort = 4500
+#*.ue[*].app[0].UALCMPAddress = "ualcmp"
+#*.ue[*].app[0].UALCMPPort = 1000
+#*.ue[*].app[0].appPackageSource = "ApplicationDescriptors/DWarningAlertApp.json"
+###
+#*.ue[*].app[1].typename = "DUEWarningAlertApp"
+#
+## set address
+#
+#*.ue[0].app[1].deviceAppAddress = "ue[0]"
+#*.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
+#
+#
+#*.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
+#*.ue[*].app[1].amsPort = 10022
+#*.ue[*].app[1].deviceAppPort = 4500
+#*.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
+#*.ue[*].app[1].stopTime = 25s
 ##
-*.ue[*].app[1].typename = "DUEWarningAlertApp"
-
-# set address
-
-*.ue[0].app[1].deviceAppAddress = "ue[0]"
-*.ue[*].app[1].deviceAppAddress = "ue[" + string(parentIndex()) + "]"
-
-
-*.ue[*].app[1].amsAddress = "mechost1.mecPlatform"
-*.ue[*].app[1].amsPort = 10022
-*.ue[*].app[1].deviceAppPort = 4500
-*.ue[*].app[1].startTime = 0.5s										#when sending start warning alert app									#period to sending messages
-*.ue[*].app[1].stopTime = 25s
+#*.ue[*].app[1].positionX = 340
+#*.ue[*].app[1].positionY = 411
+#*.ue[*].app[1].radius = 30
 #
-*.ue[*].app[1].positionX = 340
-*.ue[*].app[1].positionY = 411
-*.ue[*].app[1].radius = 30
-
-#*.ue[*].app[1].positionY = 311
-
-#*.ue[2].app[1].positionY = 511
+##*.ue[*].app[1].positionY = 311
 #
-#*.ue[3].app[1].positionY = 611
-#
-#*.ue[4].app[1].positionY = 711
-#
-#*.ue[5].app[1].positionY = 811
-#
-#*.ue[6].app[1].positionY = 911
-#
-#*.ue[7].app[1].positionY = 1011
-#
-#*.ue[8].app[1].positionY = 1111
+##*.ue[2].app[1].positionY = 511
 ##
-#*.ue[9].app[1].positionY = 1211
+##*.ue[3].app[1].positionY = 611
+##
+##*.ue[4].app[1].positionY = 711
+##
+##*.ue[5].app[1].positionY = 811
+##
+##*.ue[6].app[1].positionY = 911
+##
+##*.ue[7].app[1].positionY = 1011
+##
+##*.ue[8].app[1].positionY = 1111
+###
+##*.ue[9].app[1].positionY = 1211
+##
+##*.ue[10].app[1].positionY = 1311
 #
-#*.ue[10].app[1].positionY = 1311
-
-#*.ue[11].app[1].positionY = 1411
+##*.ue[11].app[1].positionY = 1411
+##
+##*.ue[12].app[1].positionY = 1511
+##
+##*.ue[13].app[1].positionY = 1611
+##
+##*.ue[14].app[1].positionY = 1711
+##
+##*.ue[15].app[1].positionY = 1811
+##
+##*.ue[16].app[1].positionY = 1911
+##
+##*.ue[17].app[1].positionY = 2011
 #
-#*.ue[12].app[1].positionY = 1511
-#
-#*.ue[13].app[1].positionY = 1611
-#
-#*.ue[14].app[1].positionY = 1711
-#
-#*.ue[15].app[1].positionY = 1811
-#
-#*.ue[16].app[1].positionY = 1911
-#
-#*.ue[17].app[1].positionY = 2011
-
-#*.ue[18].app[1].positionY = 2111
-#
-#*.ue[19].app[1].positionY = 2211
-#
-#*.ue[20].app[1].positionY = 2311
-
-
-#
-#*.ue2.app[1].positionX = 340
-#*.ue2.app[1].positionY = 411
-#*.ue2.app[1].radius = 30
+##*.ue[18].app[1].positionY = 2111
+##
+##*.ue[19].app[1].positionY = 2211
+##
+##*.ue[20].app[1].positionY = 2311
 #
 #
-## UEs INITIAL POSITIONs
-*.ue[*].mobility.typename = "LinearMobility"
-**.ue[*].mobility.initialX = 250m
-**.ue[*].mobility.initialY = 411m
-#**.ue[1].mobility.initialY = 311m
-#**.ue[2].mobility.initialY = 511m
-#**.ue[3].mobility.initialY = 611m
-#**.ue[4].mobility.initialY = 711m
-#**.ue[5].mobility.initialY = 811m
-#**.ue[6].mobility.initialY = 911m
-#**.ue[7].mobility.initialY = 1011m
-#**.ue[8].mobility.initialY = 1111m
-#**.ue[9].mobility.initialY = 1211m
-#**.ue[10].mobility.initialY = 1311m
-#**.ue[11].mobility.initialY  = 1411m
+##
+##*.ue2.app[1].positionX = 340
+##*.ue2.app[1].positionY = 411
+##*.ue2.app[1].radius = 30
+##
+##
+### UEs INITIAL POSITIONs
+#*.ue[*].mobility.typename = "LinearMobility"
+#**.ue[*].mobility.initialX = 250m
+#**.ue[*].mobility.initialY = 411m
+##**.ue[1].mobility.initialY = 311m
+##**.ue[2].mobility.initialY = 511m
+##**.ue[3].mobility.initialY = 611m
+##**.ue[4].mobility.initialY = 711m
+##**.ue[5].mobility.initialY = 811m
+##**.ue[6].mobility.initialY = 911m
+##**.ue[7].mobility.initialY = 1011m
+##**.ue[8].mobility.initialY = 1111m
+##**.ue[9].mobility.initialY = 1211m
+##**.ue[10].mobility.initialY = 1311m
+##**.ue[11].mobility.initialY  = 1411m
+##
+##**.ue[12].mobility.initialY = 1511m
+##
+##**.ue[13].mobility.initialY = 1611m
+##
+##**.ue[14].mobility.initialY= 1711m
+##
+##**.ue[15].mobility.initialY = 1811m
+##
+##**.ue[16].mobility.initialY = 1911m
+##
+##**.ue[17].mobility.initialY = 2011m
 #
-#**.ue[12].mobility.initialY = 1511m
+##**.ue[18].mobility.initialY = 2111m
+##
+##**.ue[19].mobility.initialY = 2211m
+##
+##**.ue[20].mobility.initialY = 2311m
 #
-#**.ue[13].mobility.initialY = 1611m
+#**.ue[*].mobility.initialMovementHeading = 0deg
+#**.ue[*].mobility.speed = 10mps
 #
-#**.ue[14].mobility.initialY= 1711m
 #
-#**.ue[15].mobility.initialY = 1811m
+## UALCMP config
+#*.ualcmp.isMEOapp = true
 #
-#**.ue[16].mobility.initialY = 1911m
+## MEC Orchestrator settings
+#*.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
+#*.mecOrchestrator.meoApp.localPort = 9876
+#*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
 #
-#**.ue[17].mobility.initialY = 2011m
-
-#**.ue[18].mobility.initialY = 2111m
+### MECHost configuration
+#**.mechost*.maxMECApps = 100	
+#**.mechost*.bsList = "gNodeB1"
+#**.mechost*.color = "purple"
+## Vim
+#*.mechost1.vim.vimApp.localAddress = "mechost1.vim"
+#*.mechost1.vim.vimApp.localPort = 3333 
+#*.mechost*.vim.vimApp.brokerAddress = "server"
+##*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
+#*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+#*.mechost*.vim.vimApp.skipLocalResources = true
+##*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
+#*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
+#*.mechost*.vim.vimApp.mepmPort = 3334
+#*.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
+#*.mechost*.vim.vimApp.meoPort = 9876
+#*.mechost*.vim.vimApp.mp1Address = "mechost1.mecPlatform"
+#*.mechost*.vim.vimApp.mp1Port = 10021
+#*.mechost1.vim.viApp.localAddress = "mechost1.vim"
+#*.mechost1.vim.viApp.vimAddress = "mechost1.vim"
+#*.mechost*.vim.viApp.vimPort = 3333
+##*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
+##*.mechost*.vim.viApp.mp1Port = 10021
 #
-#**.ue[19].mobility.initialY = 2211m
+## Mepm
+#*.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
+#*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
+#*.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
+#*.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
+#*.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
+#*.mechost*.mecPlatformManagerHost.mepmApp.meoPort = 9876
+#*.mechost1.mecPlatformManagerHost.mepmApp.brokerAddress = "mechost1.mecPlatform"
+#*.mechost1.mecPlatformManagerHost.mepmApp.brokerPort = 10022
 #
-#**.ue[20].mobility.initialY = 2311m
-
-**.ue[*].mobility.initialMovementHeading = 0deg
-**.ue[*].mobility.speed = 10mps
-
-
-# UALCMP config
-*.ualcmp.isMEOapp = true
-
-# MEC Orchestrator settings
-*.mecOrchestrator.meoApp.localAddress = "mecOrchestrator"
-*.mecOrchestrator.meoApp.localPort = 9876
-*.mecOrchestrator.meoApp.mecApplicationPackageList = "DWarningAlertApp"
-
-## MECHost configuration
-**.mechost*.maxMECApps = 100	
-**.mechost*.bsList = "gNodeB1"
-**.mechost*.color = "purple"
-# Vim
-*.mechost1.vim.vimApp.localAddress = "mechost1.vim"
-*.mechost1.vim.vimApp.localPort = 3333 
-*.mechost*.vim.vimApp.brokerAddress = "server"
-#*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
-*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
-*.mechost*.vim.vimApp.skipLocalResources = true
-#*.mechost*.vim.vimApp.skipLocalResources = ${SKIP=true, false}
-*.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
-*.mechost*.vim.vimApp.mepmPort = 3334
-*.mechost*.vim.vimApp.meoAddress = "mecOrchestrator"
-*.mechost*.vim.vimApp.meoPort = 9876
-*.mechost*.vim.vimApp.mp1Address = "mechost1.mecPlatform"
-*.mechost*.vim.vimApp.mp1Port = 10021
-*.mechost1.vim.viApp.localAddress = "mechost1.vim"
-*.mechost1.vim.viApp.vimAddress = "mechost1.vim"
-*.mechost*.vim.viApp.vimPort = 3333
-#*.mechost1.vim.viApp.mp1Address = "mechost1.mecPlatform"
-#*.mechost*.vim.viApp.mp1Port = 10021
-
-# Mepm
-*.mechost1.mecPlatformManagerHost.mepmApp.localAddress = "mechost1.mecPlatformManagerHost"
-*.mechost*.mecPlatformManagerHost.mepmApp.localPort = 3334
-*.mechost1.mecPlatformManagerHost.mepmApp.vimAddress = "mechost1.vim"
-*.mechost*.mecPlatformManagerHost.mepmApp.vimPort = 3333
-*.mechost*.mecPlatformManagerHost.mepmApp.meoAddress = "mecOrchestrator"
-*.mechost*.mecPlatformManagerHost.mepmApp.meoPort = 9876
-*.mechost1.mecPlatformManagerHost.mepmApp.brokerAddress = "mechost1.mecPlatform"
-*.mechost1.mecPlatformManagerHost.mepmApp.brokerPort = 10022
-
-# Mep
-**.mechost*.mecPlatform.numMecServices = 2
-**.mechost*.mecPlatform.mecService[0].typename = "LocationService"
-**.mechost1.mecPlatform.mecService[*].localAddress = "mechost1.mecPlatform" #da cambiare!!
-**.mechost*.mecPlatform.mecService[0].localPort = 10020
-
-**.mechost*.mecPlatform.mecService[1].typename = "ApplicationMobilityService"
-**.mechost*.mecPlatform.mecService[1].localPort = 10022
-
-**.mechost*.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
-**.mechost*.mecPlatform.mecService[0].rng-0 = 0 # request service time
-**.mechost*.mecPlatform.mecService[0].requestServiceTime = 100us
-**.mechost*.mecPlatform.mecService[0].subscriptionServiceTime = 11us
-
-**.mechost1.mecPlatform.serviceRegistry.localAddress = "mechost1.mecPlatform" #da cambiare!!
-**.mechost*.mecPlatform.serviceRegistry.localPort = 10021
-
-**.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
-**.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
+## Mep
+#**.mechost*.mecPlatform.numMecServices = 2
+#**.mechost*.mecPlatform.mecService[0].typename = "LocationService"
+#**.mechost1.mecPlatform.mecService[*].localAddress = "mechost1.mecPlatform" #da cambiare!!
+#**.mechost*.mecPlatform.mecService[0].localPort = 10020
+#
+#**.mechost*.mecPlatform.mecService[1].typename = "ApplicationMobilityService"
+#**.mechost*.mecPlatform.mecService[1].localPort = 10022
+#
+#**.mechost*.mecPlatform.mecService[0].rng-1 = 1 # subscription service time
+#**.mechost*.mecPlatform.mecService[0].rng-0 = 0 # request service time
+#**.mechost*.mecPlatform.mecService[0].requestServiceTime = 100us
+#**.mechost*.mecPlatform.mecService[0].subscriptionServiceTime = 11us
+#
+#**.mechost1.mecPlatform.serviceRegistry.localAddress = "mechost1.mecPlatform" #da cambiare!!
+#**.mechost*.mecPlatform.serviceRegistry.localPort = 10021
+#
+#**.mechost*.mecPlatform.serviceRegistry.rng-1 = 1 # subscription service time
+#**.mechost*.mecPlatform.serviceRegistry.rng-0 = 0 # request service time
 
 
 [Config TestSpawner]
 network = simulation_examples.simulations.dynamicMECHost.ParkNetworkWithSpawner
 #sim-time-limit=82800s
 sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
+seed-set = 34328492045
+#seed-0-mt = 34328492045
+#seed-1-mt = 34328492045
+#seed-2-mt = 34328492045
+#seed-3-mt = 34328492045
 
 
 # Disable vector recordings
@@ -347,14 +353,14 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.gNodeB1.**.vector-recording = false
 **.router.**.vector-recording = false
 **.server.**.vector-recording = false
-**.mecOrchestrator.**.vector-recording = false
+**.mecOrchestrator.**.vector-recording = true
 **.ualcmp.**.vector-recording = false
 **.configurator.**.vector-recording = false
 **.binder.**.vector-recording = false
 **.carrierAggregation.**.vector-recording = false
 **.channelControl.**.vector-recording = false
 **.routingRecorder.**.vector-recording = false
-**.UE*.**.vector-recording = false
+**.UE*.**.vector-recording = true
 **.UE*.mobility.**.vector-recording = false
 **.UE*.interfaceTable.**.vector-recording = false
 **.UE*.pcapRecorder*.**.vector-recording = false
@@ -420,7 +426,7 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 *.mechost1.vim.vimApp.localPort = 3333 
 *.mechost*.vim.vimApp.brokerAddress = "server"
 #*.mechost*.vim.vimApp.searchType = "BEST_FIRST"
-*.mechost*.vim.vimApp.searchType = "ROUND_ROBIN"
+*.mechost*.vim.vimApp.searchType = ${SCHEDULING="BEST_FIRST","ROUND_ROBIN","GAUSSIAN_ARNHEM_SCHEDULER"}
 #*.mechost*.vim.vimApp.skipLocalResources = true
 *.mechost*.vim.vimApp.skipLocalResources = true
 *.mechost*.vim.vimApp.mepmAddress = "mechost1.mecPlatformManagerHost"
@@ -530,10 +536,12 @@ sim-time-limit=${SIMTIME = (($TIMELINE) + 1) * 3600s}
 **.UE*.mobility.speed = 10mps
 
 **.spawner.initFromFile = true
+**.spawner.generateFromFile = true
+
 
 #**.fileParameters = ${FILE= ($TIMELINE)}
 **.spawner.parkCapacity = ${PARKCAPACITY=150}
-**.spawner.initTimeLine = ${TIMELINE = 0..12}
+**.spawner.initTimeLine = ${TIMELINE = 0..23}
 #**.spawner.initialParkedCars = 5 (keeping 20 as first set)
 **.spawner.intervalStart = ${INTERVALSTART = ($TIMELINE) * 3600}
 **.spawner.intervalBurst = 3600
